# Ai-trader

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRACTS.md  MASTER_CONTEXT.md  README.md  ROOT_ENV_TEMPLATE  SESSION_MEMORY.md  STATE.md  docker-compose.yml  ignition.sh
agents/sentiment/: .gitkeep  package-lock.json  package.json
agents/sentiment/src/: analyzer.js  claude.js  fetcher.js  index.js  kafkaProducer.js
agents/technical/src/: main.rs  proto.rs  state.rs
aggregator/: .gitkeep  Cargo.toml  build.rs
aggregator/src/: consumer.rs  engine.rs  main.rs  proto.rs  state.rs
frontend/: .gitkeep  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: TradingChart.tsx
frontend/src/components/layout/: TerminalLayout.tsx
frontend/src/components/panels/: AgentStatusPanel.tsx  LiveFeedPanel.tsx  NetworkMetrics.tsx  OrderExecutionPanel.tsx
frontend/src/store/: useTradeStore.ts
ingestion/: Cargo.toml  build.rs
ingestion/src/: kafka_producer.rs  kite_ws.rs  main.rs  parser.rs  proto.rs  types.rs
shared_protos/: market_data.proto  sentiment_data.proto
