[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust service: Kite WebSocket → Protobuf → Kafka → QuestDB"

# ===========================================================================
# Runtime Dependencies
# ===========================================================================
[dependencies]

# Async runtime — full feature set (io, time, sync, macros, rt-multi-thread)
tokio = { version = "1", features = ["full"] }

# WebSocket transport — raw + async wrappers
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Kafka producer — dynamically links to the system librdkafka (works on Windows without cmake).
# For Linux/Docker production: swap to features = ["cmake-build"] for a static, fully portable binary.
rdkafka = { version = "0.36", features = ["dynamic-linking"] }

# Protobuf serialization — encodes/decodes Tick, TechSignal, etc.
prost = "0.12"

# HTTP client — used for Kite API auth token generation
reqwest = { version = "0.11", features = ["json"] }

# Environment variable loader — reads .env file at runtime
dotenvy = "0.15"

# QuestDB ingestion via Postgres wire protocol
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }

# Serialization — Kite REST API responses + subscription messages
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Big-endian binary reading for Kite WebSocket binary tick protocol
byteorder = "1"

# Structured logging
log = "0.4"
env_logger = "0.10"

# Async stream combinators (StreamExt, SinkExt) for tokio-tungstenite
futures-util = "0.3"

# SHA-256 checksum for Kite session token generation
sha2 = "0.10"
hex = "0.4"

# ===========================================================================
# Build-time Dependencies (proto compilation)
# ===========================================================================
[build-dependencies]

# Compiles .proto files in shared_protos/ → Rust structs during `cargo build`
prost-build = "0.12"
